--- a/pencarian.html
+++ b/pencarian.html
@@ -34,23 +34,23 @@
     <div id="book-list">
         <div class="book" data-title="Buku 1">
             <img src="book1.jpg" alt="Buku 1">
-            <p>Buku 1</p>
+            <p>10 Langkah Mencerdaskan Kota</p>
         </div>
         <div class="book" data-title="Buku 2">
             <img src="book2.jpg" alt="Buku 2">
-            <p>Buku 2</p>
+            <p>Melangkah</p>
         </div>
         <div class="book" data-title="Buku 3">
             <img src="book3.jpg" alt="Buku 3">
-            <p>Buku 3</p>
+            <p>Ilmu Jalanan</p>
         </div>
         <div class="book" data-title="Buku 4">
             <img src="book4.jpg" alt="Buku 4">
-            <p>Buku 4</p>
+            <p>Mengenal Diri Sendiri</p>
         </div>
         <div class="book" data-title="Buku 5">
             <img src="book5.jpg" alt="Buku 5">
-            <p>Buku 5</p>
+            <p>Outliers (Rahasia di balik kesuksesan)</p>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
