--- a/pencarian.html
+++ b/pencarian.html
@@ -32,24 +32,24 @@
     <h1>Pencarian Buku</h1>
     <input type="text" id="search" placeholder="Cari buku...">
     <div id="book-list">
-        <div class="book" data-title="Buku 1">
-            <img src="book1.jpg" alt="Buku 1">
+        <div class="book" data-title="10 Langkah Mencerdaskan Kota">
+            <img src="picture/download (5).jpeg" alt="10 Langkah Mencerdaskan Kota">
             <p>10 Langkah Mencerdaskan Kota</p>
         </div>
-        <div class="book" data-title="Buku 2">
-            <img src="book2.jpg" alt="Buku 2">
+        <div class="book" data-title="Melangkah">
+            <img src="picture/download (6).jpeg" alt="Melangkah">
             <p>Melangkah</p>
         </div>
-        <div class="book" data-title="Buku 3">
-            <img src="book3.jpg" alt="Buku 3">
+        <div class="book" data-title="Ilmu Jalanan">
+            <img src="picture/download (7).jpeg" alt="Ilmu Jalanan">
             <p>Ilmu Jalanan</p>
         </div>
-        <div class="book" data-title="Buku 4">
-            <img src="book4.jpg" alt="Buku 4">
+        <div class="book" data-title="Mengenal Diri Sendiri">
+            <img src="picture/download (8).jpeg" alt="Mengenal Diri Sendiri">
             <p>Mengenal Diri Sendiri</p>
         </div>
-        <div class="book" data-title="Buku 5">
-            <img src="book5.jpg" alt="Buku 5">
+        <div class="book" data-title="Outliers (Rahasia di balik kesuksesan)">
+            <img src="picture/download.png" alt="Outliers (Rahasia di balik kesuksesan)">
             <p>Outliers (Rahasia di balik kesuksesan)</p>
         </div>
     </div>
