--- a/pencarian.html
+++ b/pencarian.html
@@ -64,11 +64,10 @@
 
     <div id="book-details">
         <h2>Detail Buku</h2>
-        <p id="10 Langkah Mencerdaskan Kota"></p>
-        <p id="Sutriadi"></p>
-        <p id="ITB Press"></p>
-        <p id="2018"></p>
-        <p id="978-602-5417-25-2"></p>
+        <p id="detail-title"></p>
+        <p id="detail-author"></p>
+        <p id="detail-publisher"></p>
+        <p id="detail-isbn"></p>
         <button id="close-details">Tutup</button>
     </div>
 
