--- a/pencarian.html
+++ b/pencarian.html
@@ -37,6 +37,8 @@
     </style>
 </head>
 <body>
+    <div id="navbar-placeholder"></div>
+    
     <h1>Pencarian Buku</h1>
     <input type="text" id="search" placeholder="Cari buku...">
     <div id="book-list">
