--- a/pencarian.html
+++ b/pencarian.html
@@ -76,6 +76,7 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script>
         $(document).ready(function() {
             $('#search').on('input', function() {
