--- a/pencarian.html
+++ b/pencarian.html
@@ -79,22 +79,22 @@
 
         .book-list {
             display: flex;
-            flex-wrap: nowrap; /* Menjaga agar buku tetap pada satu baris */
-            overflow-x: auto; /* Scroll horizontal jika terlalu banyak buku */
-            padding: 10px 0; /* Ruang di atas dan bawah */
+            flex-wrap: nowrap; 
+            overflow-x: auto; 
+            padding: 10px 0; 
         }
 
         .book-list::-webkit-scrollbar {
-            height: 8px; /* Tinggi scrollbar */
+            height: 8px; 
         }
 
         .book-list::-webkit-scrollbar-thumb {
-            background: #ccc; /* Warna scrollbar */
+            background: #ccc; 
             border-radius: 10px;
         }
 
         .book-list::-webkit-scrollbar-track {
-            background: #f1f1f1; /* Latar belakang scrollbar */
+            background: #f1f1f1; 
         }
     </style>
 </head>
@@ -150,7 +150,11 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+   
     <script>
+        $(function(){
+        $("#navbar-placeholder").load("navbar.html");
+        });
         $(document).ready(function() {
             $('#search').on('input', function() {
                 const query = $(this).val().toLowerCase();
