--- a/navbar.html
+++ b/navbar.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" style="background-image: url('picture/realistic-books-shelf.jpg'); background-size: cover; background-position: center; color: white; text-align: center; padding: 5rem 0;">
+<div>
     <nav class="navbar navbar-default" style="background-color: white;">
         <div class="container-fluid">
             <div class="navbar-header" style="display: flex; align-items: center;">
